--- a/eisvogel.tex
+++ b/eisvogel.tex
@@ -548,21 +548,26 @@ $endif$
 % csquotes
 %
 $if(csquotes)$
-\usepackage[$for(csquotesoptions)$$csquotesoptions$$sep$,$endfor$]{csquotes}
+  \usepackage[$for(csquotesoptions)$$csquotesoptions$$sep$,$endfor$]{csquotes}
 $endif$
+
 $for(header-includes)$
-$header-includes$
+  $header-includes$
 $endfor$
+
 \usepackage{bookmark}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{$if(urlstyle)$$urlstyle$$else$same$endif$}
+
 $if(links-as-notes)$
-% Make links footnotes instead of hotlinks:
-\DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
+  % Make links footnotes instead of hotlinks:
+  \DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
 $endif$
+
 $if(verbatim-in-note)$
-\VerbatimFootnotes % allow verbatim text in footnotes
+  \VerbatimFootnotes % allow verbatim text in footnotes
 $endif$
+
 \definecolor{default-linkcolor}{HTML}{A50000}
 \definecolor{default-filecolor}{HTML}{A50000}
 \definecolor{default-citecolor}{HTML}{4077C0}
@@ -572,18 +577,23 @@ $endif$
 $if(title-meta)$
   pdftitle={$title-meta$},
 $endif$
+
 $if(author-meta)$
   pdfauthor={$author-meta$},
 $endif$
+
 $if(lang)$
   pdflang={$lang$},
 $endif$
+
 $if(subject)$
   pdfsubject={$subject$},
 $endif$
+
 $if(keywords)$
   pdfkeywords={$for(keywords)$$keywords$$sep$, $endfor$},
 $endif$
+
 $if(colorlinks)$
   colorlinks=true,
   linkcolor={$if(linkcolor)$$linkcolor$$else$default-linkcolor$endif$},
@@ -591,6 +601,7 @@ $if(colorlinks)$
   citecolor={$if(citecolor)$$citecolor$$else$default-citecolor$endif$},
   urlcolor={$if(urlcolor)$$urlcolor$$else$default-urlcolor$endif$},
 $else$
+
 $if(boxlinks)$
 $else$
   hidelinks,
@@ -600,17 +611,19 @@ $endif$
   pdfcreator={LaTeX via pandoc with the Eisvogel template}}
 
 $if(title)$
-\title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
+  \title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
 $endif$
+
 $if(subtitle)$
-\usepackage{etoolbox}
-\makeatletter
-\providecommand{\subtitle}[1]{% add subtitle to \maketitle
-  \apptocmd{\@title}{\par {\large #1 \par}}{}{}
-}
-\makeatother
-\subtitle{$subtitle$}
+  \usepackage{etoolbox}
+  \makeatletter
+  \providecommand{\subtitle}[1]{% add subtitle to \maketitle
+    \apptocmd{\@title}{\par {\large #1 \par}}{}{}
+  }
+  \makeatother
+  \subtitle{$subtitle$}
 $endif$
+
 \author{$for(author)$$author$$sep$ \and $endfor$}
 \date{$date$}
 
@@ -622,15 +635,17 @@ $endif$
 % #start background for the background color of the title page
 %
 $if(titlepage)$
-\usepackage{pagecolor}
-\usepackage{afterpage}
-$if(titlepage-background)$
-\usepackage{tikz}
-$endif$
-$if(geometry)$
-$else$
-\usepackage[margin=2.5cm,includehead=true,includefoot=true,centering]{geometry}
-$endif$
+  \usepackage{pagecolor}
+  \usepackage{afterpage}
+
+  $if(titlepage-background)$
+    \usepackage{tikz}
+  $endif$
+
+  $if(geometry)$
+  $else$
+    \usepackage[margin=2.5cm,includehead=true,includefoot=true,centering]{geometry}
+  $endif$
 $endif$
 
 %
@@ -671,33 +686,33 @@ $endif$
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   $if(fontfamily)$
   $else$
-  \usepackage[default]{sourcesanspro}
-  \usepackage{sourcecodepro}
+    \usepackage[default]{sourcesanspro}
+    \usepackage{sourcecodepro}
   $endif$
 \else % if not pdftex
   $if(mainfont)$
   $else$
-  \usepackage[default]{sourcesanspro}
-  \usepackage{sourcecodepro}
+    \usepackage[default]{sourcesanspro}
+    \usepackage{sourcecodepro}
 
-  % XeLaTeX specific adjustments for straight quotes: https://tex.stackexchange.com/a/354887
-  % This issue is already fixed (see https://github.com/silkeh/latex-sourcecodepro/pull/5) but the
-  % fix is still unreleased.
-  % TODO: Remove this workaround when the new version of sourcecodepro is released on CTAN.
-  \ifxetex
-    \makeatletter
-    \defaultfontfeatures[\ttfamily]
-      { Numbers   = \sourcecodepro@figurestyle,
-        Scale     = \SourceCodePro@scale,
-        Extension = .otf }
-    \setmonofont
-      [ UprightFont    = *-\sourcecodepro@regstyle,
-        ItalicFont     = *-\sourcecodepro@regstyle It,
-        BoldFont       = *-\sourcecodepro@boldstyle,
-        BoldItalicFont = *-\sourcecodepro@boldstyle It ]
-      {SourceCodePro}
-    \makeatother
-  \fi
+    % XeLaTeX specific adjustments for straight quotes: https://tex.stackexchange.com/a/354887
+    % This issue is already fixed (see https://github.com/silkeh/latex-sourcecodepro/pull/5) but the
+    % fix is still unreleased.
+    % TODO: Remove this workaround when the new version of sourcecodepro is released on CTAN.
+    \ifxetex
+      \makeatletter
+      \defaultfontfeatures[\ttfamily]
+        { Numbers   = \sourcecodepro@figurestyle,
+          Scale     = \SourceCodePro@scale,
+          Extension = .otf }
+      \setmonofont
+        [ UprightFont    = *-\sourcecodepro@regstyle,
+          ItalicFont     = *-\sourcecodepro@regstyle It,
+          BoldFont       = *-\sourcecodepro@boldstyle,
+          BoldItalicFont = *-\sourcecodepro@boldstyle It ]
+        {SourceCodePro}
+      \makeatother
+    \fi
   $endif$
 \fi
 
@@ -723,28 +738,28 @@ $endif$
 %
 $if(tables)$
 
-\definecolor{table-row-color}{HTML}{F5F5F5}
-\definecolor{table-rule-color}{HTML}{999999}
+  \definecolor{table-row-color}{HTML}{F5F5F5}
+  \definecolor{table-rule-color}{HTML}{999999}
 
-%\arrayrulecolor{black!40}
-\arrayrulecolor{table-rule-color}     % color of \toprule, \midrule, \bottomrule
-\setlength\heavyrulewidth{0.3ex}      % thickness of \toprule, \bottomrule
-\renewcommand{\arraystretch}{1.3}     % spacing (padding)
+  %\arrayrulecolor{black!40}
+  \arrayrulecolor{table-rule-color}     % color of \toprule, \midrule, \bottomrule
+  \setlength\heavyrulewidth{0.3ex}      % thickness of \toprule, \bottomrule
+  \renewcommand{\arraystretch}{1.3}     % spacing (padding)
 
-$if(table-use-row-colors)$
-% Unfortunately the colored cells extend beyond the edge of the
-% table because pandoc uses @-expressions (@{}) like so:
-%
-% \begin{longtable}[]{@{}ll@{}}
-% \end{longtable}
-%
-% https://en.wikibooks.org/wiki/LaTeX/Tables#.40-expressions
-\usepackage{etoolbox}
-\AtBeginEnvironment{longtable}{\rowcolors{2}{}{table-row-color!100}}
-\preto{\toprule}{\hiderowcolors}{}{}
-\appto{\endhead}{\showrowcolors}{}{}
-\appto{\endfirsthead}{\showrowcolors}{}{}
-$endif$
+  $if(table-use-row-colors)$
+    % Unfortunately the colored cells extend beyond the edge of the
+    % table because pandoc uses @-expressions (@{}) like so:
+    %
+    % \begin{longtable}[]{@{}ll@{}}
+    % \end{longtable}
+    %
+    % https://en.wikibooks.org/wiki/LaTeX/Tables#.40-expressions
+    \usepackage{etoolbox}
+    \AtBeginEnvironment{longtable}{\rowcolors{2}{}{table-row-color!100}}
+    \preto{\toprule}{\hiderowcolors}{}{}
+    \appto{\endhead}{\showrowcolors}{}{}
+    \appto{\endfirsthead}{\showrowcolors}{}{}
+  $endif$
 $endif$
 
 %
@@ -762,174 +777,182 @@ $endif$
 
 $if(listings)$
 
-%
-% general listing colors
-%
-\definecolor{listing-background}{HTML}{F7F7F7}
-\definecolor{listing-rule}{HTML}{B3B2B3}
-\definecolor{listing-numbers}{HTML}{B3B2B3}
-\definecolor{listing-text-color}{HTML}{000000}
-\definecolor{listing-keyword}{HTML}{435489}
-\definecolor{listing-keyword-2}{HTML}{1284CA} % additional keywords
-\definecolor{listing-keyword-3}{HTML}{9137CB} % additional keywords
-\definecolor{listing-identifier}{HTML}{435489}
-\definecolor{listing-string}{HTML}{00999A}
-\definecolor{listing-comment}{HTML}{8E8E8E}
+  %
+  % #start listings general listing colors
+  %
+  \definecolor{listing-background}{HTML}{F7F7F7}
+  \definecolor{listing-rule}{HTML}{B3B2B3}
+  \definecolor{listing-numbers}{HTML}{B3B2B3}
+  \definecolor{listing-text-color}{HTML}{000000}
+  \definecolor{listing-keyword}{HTML}{435489}
+  \definecolor{listing-keyword-2}{HTML}{1284CA} % additional keywords
+  \definecolor{listing-keyword-3}{HTML}{9137CB} % additional keywords
+  \definecolor{listing-identifier}{HTML}{435489}
+  \definecolor{listing-string}{HTML}{00999A}
+  \definecolor{listing-comment}{HTML}{8E8E8E}
 
-\lstdefinestyle{eisvogel_listing_style}{
-  language         = java,
-$if(listings-disable-line-numbers)$
-  xleftmargin      = 0.6em,
-  framexleftmargin = 0.4em,
-$else$
-  numbers          = left,
-  xleftmargin      = 2.7em,
-  framexleftmargin = 2.5em,
+  \lstdefinestyle{eisvogel_listing_style}{
+    language         = java,
+  $if(listings-disable-line-numbers)$
+    xleftmargin      = 0.6em,
+    framexleftmargin = 0.4em,
+  $else$
+    numbers          = left,
+    xleftmargin      = 2.7em,
+    framexleftmargin = 2.5em,
+  $endif$
+    backgroundcolor  = \color{listing-background},
+    basicstyle       = \color{listing-text-color}\linespread{1.0}%
+                        \lst@ifdisplaystyle%
+                        $if(code-block-font-size)$$code-block-font-size$$else$\small$endif$%
+                        \fi\ttfamily{},
+    breaklines       = true,
+    frame            = single,
+    framesep         = 0.19em,
+    rulecolor        = \color{listing-rule},
+    frameround       = ffff,
+    tabsize          = 4,
+    numberstyle      = \color{listing-numbers},
+    aboveskip        = 1.0em,
+    belowskip        = 0.1em,
+    abovecaptionskip = 0em,
+    belowcaptionskip = 1.0em,
+    keywordstyle     = {\color{listing-keyword}\bfseries},
+    keywordstyle     = {[2]\color{listing-keyword-2}\bfseries},
+    keywordstyle     = {[3]\color{listing-keyword-3}\bfseries\itshape},
+    sensitive        = true,
+    identifierstyle  = \color{listing-identifier},
+    commentstyle     = \color{listing-comment},
+    stringstyle      = \color{listing-string},
+    showstringspaces = false,
+    escapeinside     = {/*@}{@*/}, % Allow LaTeX inside these special comments
+    literate         =
+    {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
+    {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
+    {à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
+    {À}{{\`A}}1 {È}{{\`E}}1 {Ì}{{\`I}}1 {Ò}{{\`O}}1 {Ù}{{\`U}}1
+    {ä}{{\"a}}1 {ë}{{\"e}}1 {ï}{{\"i}}1 {ö}{{\"o}}1 {ü}{{\"u}}1
+    {Ä}{{\"A}}1 {Ë}{{\"E}}1 {Ï}{{\"I}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
+    {â}{{\^a}}1 {ê}{{\^e}}1 {î}{{\^i}}1 {ô}{{\^o}}1 {û}{{\^u}}1
+    {Â}{{\^A}}1 {Ê}{{\^E}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1 {Û}{{\^U}}1
+    {œ}{{\oe}}1 {Œ}{{\OE}}1 {æ}{{\ae}}1 {Æ}{{\AE}}1 {ß}{{\ss}}1
+    {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
+    {€}{{\EUR}}1 {£}{{\pounds}}1 {«}{{\guillemotleft}}1
+    {»}{{\guillemotright}}1 {ñ}{{\~n}}1 {Ñ}{{\~N}}1 {¿}{{?`}}1
+    {…}{{\ldots}}1 {≥}{{>=}}1 {≤}{{<=}}1 {„}{{\glqq}}1 {“}{{\grqq}}1
+    {”}{{''}}1
+  }
+  \lstset{style=eisvogel_listing_style}
+
+  %
+  % Java (Java SE 12, 2019-06-22)
+  %
+  \lstdefinelanguage{Java}{
+    morekeywords={
+      % normal keywords (without data types)
+      abstract,assert,break,case,catch,class,continue,default,
+      do,else,enum,exports,extends,final,finally,for,if,implements,
+      import,instanceof,interface,module,native,new,package,private,
+      protected,public,requires,return,static,strictfp,super,switch,
+      synchronized,this,throw,throws,transient,try,volatile,while,
+      % var is an identifier
+      var
+    },
+    morekeywords={[2] % data types
+      % primitive data types
+      boolean,byte,char,double,float,int,long,short,
+      % String
+      String,
+      % primitive wrapper types
+      Boolean,Byte,Character,Double,Float,Integer,Long,Short
+      % number types
+      Number,AtomicInteger,AtomicLong,BigDecimal,BigInteger,DoubleAccumulator,DoubleAdder,LongAccumulator,LongAdder,Short,
+      % other
+      Object,Void,void
+    },
+    morekeywords={[3] % literals
+      % reserved words for literal values
+      null,true,false,
+    },
+    sensitive,
+    morecomment  = [l]//,
+    morecomment  = [s]{/*}{*/},
+    morecomment  = [s]{/**}{*/},
+    morestring   = [b]",
+    morestring   = [b]',
+  }
+
+  \lstdefinelanguage{XML}{
+    morestring      = [b]",
+    moredelim       = [s][\bfseries\color{listing-keyword}]{<}{\ },
+    moredelim       = [s][\bfseries\color{listing-keyword}]{</}{>},
+    moredelim       = [l][\bfseries\color{listing-keyword}]{/>},
+    moredelim       = [l][\bfseries\color{listing-keyword}]{>},
+    morecomment     = [s]{<?}{?>},
+    morecomment     = [s]{<!--}{-->},
+    commentstyle    = \color{listing-comment},
+    stringstyle     = \color{listing-string},
+    identifierstyle = \color{listing-identifier}
+  }
 $endif$
-  backgroundcolor  = \color{listing-background},
-  basicstyle       = \color{listing-text-color}\linespread{1.0}%
-                      \lst@ifdisplaystyle%
-                      $if(code-block-font-size)$$code-block-font-size$$else$\small$endif$%
-                      \fi\ttfamily{},
-  breaklines       = true,
-  frame            = single,
-  framesep         = 0.19em,
-  rulecolor        = \color{listing-rule},
-  frameround       = ffff,
-  tabsize          = 4,
-  numberstyle      = \color{listing-numbers},
-  aboveskip        = 1.0em,
-  belowskip        = 0.1em,
-  abovecaptionskip = 0em,
-  belowcaptionskip = 1.0em,
-  keywordstyle     = {\color{listing-keyword}\bfseries},
-  keywordstyle     = {[2]\color{listing-keyword-2}\bfseries},
-  keywordstyle     = {[3]\color{listing-keyword-3}\bfseries\itshape},
-  sensitive        = true,
-  identifierstyle  = \color{listing-identifier},
-  commentstyle     = \color{listing-comment},
-  stringstyle      = \color{listing-string},
-  showstringspaces = false,
-  escapeinside     = {/*@}{@*/}, % Allow LaTeX inside these special comments
-  literate         =
-  {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
-  {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
-  {à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
-  {À}{{\`A}}1 {È}{{\`E}}1 {Ì}{{\`I}}1 {Ò}{{\`O}}1 {Ù}{{\`U}}1
-  {ä}{{\"a}}1 {ë}{{\"e}}1 {ï}{{\"i}}1 {ö}{{\"o}}1 {ü}{{\"u}}1
-  {Ä}{{\"A}}1 {Ë}{{\"E}}1 {Ï}{{\"I}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
-  {â}{{\^a}}1 {ê}{{\^e}}1 {î}{{\^i}}1 {ô}{{\^o}}1 {û}{{\^u}}1
-  {Â}{{\^A}}1 {Ê}{{\^E}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1 {Û}{{\^U}}1
-  {œ}{{\oe}}1 {Œ}{{\OE}}1 {æ}{{\ae}}1 {Æ}{{\AE}}1 {ß}{{\ss}}1
-  {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
-  {€}{{\EUR}}1 {£}{{\pounds}}1 {«}{{\guillemotleft}}1
-  {»}{{\guillemotright}}1 {ñ}{{\~n}}1 {Ñ}{{\~N}}1 {¿}{{?`}}1
-  {…}{{\ldots}}1 {≥}{{>=}}1 {≤}{{<=}}1 {„}{{\glqq}}1 {“}{{\grqq}}1
-  {”}{{''}}1
-}
-\lstset{style=eisvogel_listing_style}
+
+% #end listings
 
 %
-% Java (Java SE 12, 2019-06-22)
-%
-\lstdefinelanguage{Java}{
-  morekeywords={
-    % normal keywords (without data types)
-    abstract,assert,break,case,catch,class,continue,default,
-    do,else,enum,exports,extends,final,finally,for,if,implements,
-    import,instanceof,interface,module,native,new,package,private,
-    protected,public,requires,return,static,strictfp,super,switch,
-    synchronized,this,throw,throws,transient,try,volatile,while,
-    % var is an identifier
-    var
-  },
-  morekeywords={[2] % data types
-    % primitive data types
-    boolean,byte,char,double,float,int,long,short,
-    % String
-    String,
-    % primitive wrapper types
-    Boolean,Byte,Character,Double,Float,Integer,Long,Short
-    % number types
-    Number,AtomicInteger,AtomicLong,BigDecimal,BigInteger,DoubleAccumulator,DoubleAdder,LongAccumulator,LongAdder,Short,
-    % other
-    Object,Void,void
-  },
-  morekeywords={[3] % literals
-    % reserved words for literal values
-    null,true,false,
-  },
-  sensitive,
-  morecomment  = [l]//,
-  morecomment  = [s]{/*}{*/},
-  morecomment  = [s]{/**}{*/},
-  morestring   = [b]",
-  morestring   = [b]',
-}
-
-\lstdefinelanguage{XML}{
-  morestring      = [b]",
-  moredelim       = [s][\bfseries\color{listing-keyword}]{<}{\ },
-  moredelim       = [s][\bfseries\color{listing-keyword}]{</}{>},
-  moredelim       = [l][\bfseries\color{listing-keyword}]{/>},
-  moredelim       = [l][\bfseries\color{listing-keyword}]{>},
-  morecomment     = [s]{<?}{?>},
-  morecomment     = [s]{<!--}{-->},
-  commentstyle    = \color{listing-comment},
-  stringstyle     = \color{listing-string},
-  identifierstyle = \color{listing-identifier}
-}
-$endif$
-
-%
-% header and footer
+% #start margins header and footer options
 %
 $if(disable-header-and-footer)$
 $else$
-\usepackage[headsepline,footsepline]{scrlayer-scrpage}
+  \usepackage[headsepline,footsepline]{scrlayer-scrpage}
 
-\newpairofpagestyles{eisvogel-header-footer}{
-  \clearpairofpagestyles
-  \ihead*{$if(header-left)$$header-left$$else$$ID$$endif$}
-  \chead*{$if(header-center)$$header-center$$else$$title$$endif$}
-  \ohead*{$if(header-right)$$header-right$$else$$date$$endif$}
-  \ifoot*{$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$}
-  \cfoot*{$if(footer-center)$$footer-center$$else$$for(email)$$email$$sep$, $endfor$$endif$}
-  \ofoot*{$if(footer-right)$$footer-right$$else$\thepage$endif$}
-  \addtokomafont{pageheadfoot}{\upshape}
-}
-\pagestyle{eisvogel-header-footer}
+  \newpairofpagestyles{eisvogel-header-footer}{
+    \clearpairofpagestyles
+    \ihead*{$if(header-left)$$header-left$$else$$ID$$endif$}
+    \chead*{$if(header-center)$$header-center$$else$$title$$endif$}
+    \ohead*{$if(header-right)$$header-right$$else$$date$$endif$}
+    \ifoot*{$if(footer-left)$$footer-left$$else$$for(author)$$author$$sep$, $endfor$$endif$}
+    \cfoot*{$if(footer-center)$$footer-center$$else$$for(email)$$email$$sep$, $endfor$$endif$}
+    \ofoot*{$if(footer-right)$$footer-right$$else$\thepage$endif$}
+    \addtokomafont{pageheadfoot}{\upshape}
+  }
+  \pagestyle{eisvogel-header-footer}
 
-$if(book)$
-\deftripstyle{ChapterStyle}{}{}{}{}{\pagemark}{}
-\renewcommand*{\chapterpagestyle}{ChapterStyle}
+  $if(book)$
+    \deftripstyle{ChapterStyle}{}{}{}{}{\pagemark}{}
+    \renewcommand*{\chapterpagestyle}{ChapterStyle}
+  $endif$
+
+  $if(page-background)$
+    \backgroundsetup{
+    scale=1,
+    color=black,
+    opacity=$if(page-background-opacity)$$page-background-opacity$$else$0.2$endif$,
+    angle=0,
+    contents={%
+      \includegraphics[width=\paperwidth,height=\paperheight]{$page-background$}
+      }%
+    }
+  $endif$
 $endif$
 
-$if(page-background)$
-\backgroundsetup{
-scale=1,
-color=black,
-opacity=$if(page-background-opacity)$$page-background-opacity$$else$0.2$endif$,
-angle=0,
-contents={%
-  \includegraphics[width=\paperwidth,height=\paperheight]{$page-background$}
-  }%
-}
-$endif$
-$endif$
+% #end margins
 
 %
-% Define watermark
+% #start watermark Define watermark
 %
 $if(watermark)$
-\usepackage{draftwatermark}
-\SetWatermarkText{$watermark$}
-\SetWatermarkScale{.5}
+  \usepackage{draftwatermark}
+  \SetWatermarkText{$watermark$}
+  \SetWatermarkScale{.5}
 $endif$
 
-% Custom heading styling
+% #end watermark
 
-% Colors
+%
+% #start headings Custom heading styling
+%
+
+% #start heading-colors
 \definecolor{ctpRosewater} {RGB} {242, 213, 207}	
 \definecolor{ctpFlamingo}  {RGB} {238, 190, 190}	
 \definecolor{ctpPink}      {RGB} {244, 184, 228}	
@@ -956,7 +979,10 @@ $endif$
 \definecolor{ctpBase}      {RGB} {48, 52, 70}	
 \definecolor{ctpMantle}    {RGB} {41, 44, 60}	
 \definecolor{ctpCrust}     {RGB} {35, 38, 52}	
-% Section styling
+
+% #end heading-colors
+
+% #start sections Section styling
 \addtokomafont{section}{\color{ctpRed}\Large}
 \addtokomafont{subsection}{\color{ctpBlue}\large}
 \addtokomafont{subsubsection}{\color{ctpPeach}\normalsize}
@@ -988,9 +1014,9 @@ $endif$
 % \renewcommand*{\subsectionformat}{\thesubsection.\enskip}
 % \renewcommand*{\subsubsectionformat}{\thesubsubsection.\enskip}
 
-%%
-%% end added
-%%
+% #end sections
+
+% #end headings
 
 \begin{document}
 
@@ -1068,7 +1094,7 @@ $if(titlepage)$
       $endif$
 
       %%
-      %% #start Modified NC 2025
+      %% #start extras extra titlepage metadata
       %%
 
       $if(license)$
